[package]
name = "kmonadx-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
kmonadx = { git = "https://github.com/srithon/kmonadx.git", version = "0.4" }
